# libnbfx

./: .gitignore  CMakeLists.txt  README.md
include/: nbfx.hpp
include/nbfx/: NbfxAttribute.hpp  NbfxElement.hpp  NbfxRecord.hpp  NbfxValue.hpp  QName.hpp  deserializer.hpp  serializer.hpp
src/: NbfxValue.cpp  stdafx.cpp
tests/: NbfxAttributeParserTests.cpp  NbfxElementParserTests.cpp  NbfxElementTests.cpp  NbfxRoundTripTests.cpp  NbfxSerializerTests.cpp  NbfxValueParserTests.cpp
